--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ a{
     z-index: 1000;
     height: 0px; 
     list-style: none;
-    gap: 0.7rem;
-    background-color: #121214; 
-    transition: .6s;   
+    gap: 0.7rem;    
+    transition: .9s;   
     visibility: hidden;   
     overflow-y: hidden;
     padding: 0;
@@ -77,7 +76,7 @@ header{
     height: 2px;
     background: currentColor;
     margin-top: 5px;
-    transition: 0.3s;
+    transition: 0.9s;
     position: relative;
 }
 
@@ -102,7 +101,7 @@ header{
 
 
 .home{
-    padding: 70px 0;
+    min-height: 85vh;
 }
 
 .header, .home, .projetos, footer{
@@ -119,13 +118,13 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid #81D8F7;
-    min-height: 70vh;
+    border-bottom: 1px solid #81D8F7;   
     
 }
 
 .sobre, .projetos, .skills{  
     padding: 30px 0;
+    min-height: 100vh;
 
 }
 .home-left p{
@@ -178,7 +177,7 @@ header{
 
 
 .texto-sobre h2{
-   margin: 10px 0;
+   margin: 20px 0 10px;
 }
 
 .texto-sobre{
@@ -335,7 +334,6 @@ header{
     justify-content: center;
     gap: 27px;
     flex-wrap: wrap;
-    width: 100%;
     height: 150px;
     margin-bottom: 50px;
 }
