--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,75 +1,80 @@
-*{
+* {
     margin: 0;
     border: 0;
     font-family: "Inter", sans-serif;
     box-sizing: border-box;
     color: #81D8F7;
-    
+
 }
 
-a{
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #0B0B0C;
+    height: 80px;
+    padding: 0 12%;
+    border-bottom: 1px solid #81D8F7;
+
+}
+
+a {
     text-decoration: none;
-    
+
 }
 
-#list-menu{
+#list-menu {
     display: block;
     position: absolute;
-    width: 100%;
-    top: 70px;
-    right: 0;    
+    top: 55px;
+    right: 0;
     z-index: 1000;
-    height: 0px; 
+    height: 0px;
     list-style: none;
-    gap: 0.7rem;    
-    transition: .9s;   
-    visibility: hidden;   
+    gap: 0.7rem;
+    transition: .9s;
+    visibility: hidden;
     overflow-y: hidden;
     padding: 0;
+    background-color: #121212;
+    border-radius: 10px;
+    border: 1px solid #81D8F7;
 
 }
 
-#nav.active #list-menu{
+#nav.active #list-menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: calc(30vh - 70px);
+    height: calc(26vh - 55px);
     visibility: visible;
     overflow-y: auto;
 }
 
-#list-menu a {       
+#list-menu a {
     margin: 0 1rem;
-    
-  }
 
-#list-menu li{
+}
+
+a:hover {
+    color: #ebe2e2;
+}
+
+#list-menu li {
     padding-bottom: 0.6rem;
     border-bottom: 1px solid #1C1C1C;
 }
 
 
-header{
-    background-color: #0B0B0C;
-    box-sizing: border-box;
-    height: 80px;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #81D8F7;
-}
-
-
-#hamburger {
+.botao-menu {
     display: block;
     border-top: 2px solid #81D8F7;
     width: 20px;
     color: #81D8F7;
 }
 
-#hamburger::after,
-#hamburger::before {
+.botao-menu:after,
+.botao-menu:before {
     content: '';
     display: block;
     width: 20px;
@@ -80,66 +85,74 @@ header{
     position: relative;
 }
 
-#nav.active #hamburger {
+#nav.active .botao-menu {
     border-top-color: transparent;
 }
 
-#nav.active #hamburger::before {
+#nav.active .botao-menu:before {
     transform: rotate(135deg);
 }
-#nav.active #hamburger::after {
+
+#nav.active .botao-menu:after {
     transform: rotate(-135deg);
     top: -7px;
-}  
+}
 
-.logo{
+.logo {
     font-size: 1.5rem;
 }
 
 
-
-
-
-.home{
-    min-height: 85vh;
+.home {
+    min-height: 75vh;
 }
 
-.header, .home, .projetos, footer{
+.header,
+.home,
+.projetos,
+footer {
     background-color: #0B0B0C;
 }
 
-.sobre, .skills{
+.sobre,
+.skills {
     background-color: #121214;
 }
 
 
-.home, .sobre, .projetos, .skills{  
+.home,
+.sobre,
+.projetos,
+.skills {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    border-bottom: 1px solid #81D8F7;   
-    
-}
-
-.sobre, .projetos, .skills{  
-    padding: 30px 0;
-    min-height: 80vh;
+    border-bottom: 1px solid #81D8F7;
 
 }
-.home-left p{
+
+.sobre,
+.projetos,
+.skills {
+    padding: 15px 0 100px 0;
+    min-height: 75vh;
+}
+
+
+.apresentacao, .github-Button p {
     margin: 5px 0;
     font-size: 20px;
 }
 
-#name{
+.name {
     text-transform: uppercase;
     text-align: center;
     font-size: 32px;
     margin: 10px 0;
 }
 
-#name::after{
+.name::after {
     content: "|";
     animation: pisca;
     animation-duration: 1s;
@@ -148,62 +161,75 @@ header{
 
 
 
-@keyframes pisca{
-    0%,100%{
+@keyframes pisca {
+
+    0%,
+    100% {
         opacity: 1;
     }
-    50%{
+
+    50% {
         opacity: 0;
     }
 }
 
 
 
-.home-right{
+.home-right {
     display: none;
 }
 
-.area-sobre{
+.area-sobre {
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+
 }
 
-.imagem-perfil img{
+
+
+.imagem-perfil img {
     width: 248px;
     height: 233px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.521);
 }
 
-
-.texto-sobre h2{
-   margin: 20px 0 10px;
+.sobre-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.texto-sobre{
+
+.texto-sobre {
+    margin-top: 20px;
     text-align: center;
     width: 80%;
     line-height: 25px;
     margin-bottom: 5px;
+    font-size: 20px;
 }
 
-.principal-button{
+.principal-button {
     display: flex;
     justify-content: center;
     margin-top: 2rem;
-    
+
 }
 
-.github-Button{
+.github-Button {
     padding: 10px 5px 10px;
     width: 200px;
     height: 59px;
     border-radius: 10px;
-    border: 2px solid #81D8F7; 
-    
+    border: 2px solid #81D8F7;
+
 }
 
-.github-Button,.sobre-mim_linkedin, .sobre-mim_contato {
+.github-Button,
+.sobre-mim_linkedin,
+.sobre-mim_contato {
     display: flex;
     align-items: center;
     font-weight: bold;
@@ -211,26 +237,29 @@ header{
     cursor: hover;
 }
 
-.github-Button img{
+.github-Button img {
     margin-left: 25px;
     margin-right: 10px;
     width: 33px;
 }
 
 
-.sobre-mim_buttons{
+.sobre-mim_buttons {
     display: flex;
     width: 350px;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 2rem;
-    
+
 }
 
-.sobre-mim_buttons a ,.principal-button a, .button-projetos a{
+.sobre-mim_buttons a,
+.principal-button a,
+.button-projetos a {
     text-decoration: none;
 }
 
-.sobre-mim_linkedin, .sobre-mim_contato{    
+.sobre-mim_linkedin,
+.sobre-mim_contato {
     padding: 3px 5px 5px;
     width: 140px;
     height: 45px;
@@ -238,18 +267,18 @@ header{
 }
 
 
-.sobre-mim_linkedin{
+.sobre-mim_linkedin {
     border: 1px solid #633BBC;
 }
 
-.sobre-mim_contato{
+.sobre-mim_contato {
     border: 1px solid #1DAE5B;
 }
 
-.vermais-Button{
+.vermais-Button {
     margin-top: 15px;
     text-align: center;
-    border: 1px solid #1DAE5B; 
+    border: 1px solid #1DAE5B;
     padding: 10px;
     border-radius: 15px;
     width: 150px;
@@ -260,86 +289,91 @@ header{
 .sobre-mim_contato p,
 .sobre-mim_contato img,
 .github-Button p,
-.github-Button img
-{
+.github-Button img {
     padding: 9px 0 5px;
 }
 
-.sobre-mim_linkedin p{
+.sobre-mim_linkedin p {
     padding: 11px 0 5px;
 }
 
 .sobre-mim_linkedin p,
 .sobre-mim_contato p,
 .github-Button p,
-.vermais-Button p{   
+.vermais-Button p {
     color: #C4C4C4;
 }
 
 
-.sobre-mim_linkedin img, .sobre-mim_contato img{
+.sobre-mim_linkedin img,
+.sobre-mim_contato img {
     width: 20px;
     margin-left: 5px;
     margin-right: 10px;
 }
 
-.projetos, .skills{
+.sobre,
+.projetos,
+.skills {
     flex-direction: column;
 }
 
-.projetos h2, .skills h2{
+
+
+.projetos h2,
+.sobre h2,
+.skills h2 {
     margin-bottom: 25px;
     text-align: center;
     font-size: 30px;
 }
 
-.cards-projetos{
+.cards-projetos {
     display: flex;
     flex-direction: column;
     gap: 5px;
-    
+
 }
 
-.card-projeto img{
-    width: 200px;
-    height: 145px;
+.card-projeto img {
+    max-width: 250px;
     border-radius: 11px;
 }
 
-.visivel img{
+.visivel img {
     display: none;
 }
 
-.button-projetos{
+.button-projetos {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
 }
 
-#repositorios-git{
+#repositorios-git {
     color: #fff;
-   
+
     font-size: 14px;
 }
 
-#repositorios-git:hover{
+#repositorios-git:hover {
     color: #FFD700;
     transition: 0.5s;
 }
 
 
-.area-tecnologias{
+.area-tecnologias {
     display: flex;
     justify-content: center;
     gap: 27px;
     flex-wrap: wrap;
-    height: 150px;
-    margin-bottom: 50px;
+    max-width: 90%;
+
 }
 
 
-.tecnologia{
+.tecnologia {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -349,37 +383,46 @@ header{
     border-radius: 10px;
 }
 
-.tecnologia img{
+.tecnologia img {
     height: 50px;
     width: 50px;
     background-color: #C0C0C0;
 }
 
-.painel{
+
+.tec {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.painel {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #212124;
-    width: 284px;
+    width: 90%;
     height: 352px;
     border: 1px solid #81D8F7;
     border-radius: 12px;
+    margin-top: 20px;
 }
 
-.painel p{
+.painel p {
     color: #fff;
     background-color: #212124;
     text-align: center;
     font-size: 20px;
-    
 }
 
-footer{
+footer {
     text-align: center;
-    padding: 20px;
-    
+    padding: 30px;
+
 }
 
-footer p{
+footer p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -387,7 +430,7 @@ footer p{
     margin-bottom: 2px;
 }
 
-footer img{
+footer img {
     background-color: #fff;
     padding: 5px;
     border-radius: 50px;
