--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     border-bottom: 1px solid #81D8F7;
+    
 
 }
 
@@ -135,7 +136,7 @@ footer {
 .projetos,
 .skills {
     padding: 15px 0 100px 0;
-    min-height: 75vh;
+    min-height: 20vh;
 }
 
 
@@ -332,25 +333,20 @@ footer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 50%;
-    gap: 5px;
-    margin: 0 auto;
+    gap: 15px;
+    width: 100%;   
     justify-content: center;
     align-items: center;
 }
 
 .card-projeto img {
-    max-width: 230px;
+    height: 155px;
+    width: 200px;
     border-radius: 11px;
 }
 
-.visivel img {
+.hidden{
     display: none;
-}
-
-.visivel.active{
-    display: flex;
-    flex-direction: row;
 }
 
 .button-projetos {
