--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,12 @@ footer {
     border-radius: 11px;
 }
 
+.projetos-escondido{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
 .hidden{
     display: none;
 }
@@ -367,16 +373,18 @@ footer {
     transition: 0.5s;
 }
 
-
-.area-tecnologias {
+.tec {
     display: flex;
-    justify-content: center;
-    gap: 27px;
-    flex-wrap: wrap;
-    max-width: 90%;
-
+    flex-direction: column;
+    align-items: center;
 }
 
+
+.tecs{
+    display: flex;
+    gap: 27px;
+    padding: 15px 0 ;
+}
 
 .tecnologia {
     display: flex;
@@ -386,7 +394,15 @@ footer {
     height: 70px;
     width: 80px;
     border-radius: 10px;
+    cursor: pointer;
 }
+
+.tecnologia:hover{
+    cursor: pointer;
+    transform: translate(0, -15px);
+    transition: 0.7s;
+}
+
 
 .tecnologia img {
     height: 50px;
@@ -395,31 +411,74 @@ footer {
 }
 
 
-.tec {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.painel {         
+    background-color: #212124;
+    max-width: 90%;
+    height: 580px;
+    border: 1px solid #81D8F7;
+    border-radius: 12px;
 
 }
 
-.painel {
+.info-skills{
+    display: none;
+}
+
+#mensagem{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #212124;
-    width: 90%;
-    height: 352px;
-    border: 1px solid #81D8F7;
-    border-radius: 12px;
-    margin-top: 20px;
+    font-size: 25px;
+    text-align: center;
+    color: #fff;
+    height: 100%;
+    
 }
 
-.painel p {
+.nome-tec{
     color: #fff;
-    background-color: #212124;
-    text-align: center;
-    font-size: 20px;
+    font-size: 25px;
+    padding-top: 5px;
+    font-weight: bold;
 }
+
+.nome-tec,.imagem-painel{
+    display: flex;
+    justify-content: center;
+}
+
+.imagem-painel{
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid #81D8F7;
+    padding: 10px 0 20px 0;
+}
+
+.imagem-painel img{
+    height: 100px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.sobre-tec{
+    color: #fff;
+    font-size: 18px;
+    margin-top: 30px;
+    margin: 20px 5px 0 5px;
+    line-height: 25px;
+}
+
+.sobre-tec span{
+    font-size: 20px;
+    color: #fff;
+    display: block;
+    margin-bottom: 3px;
+}
+
+
 
 footer {
     text-align: center;
