iniciando card projetos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     border: 0;
     font-family: 'Roboto Condensed', sans-serif;
     box-sizing: border-box;
-    color: #81D8F7;
+    
     scroll-behavior: smooth;
 }
 
@@ -21,11 +21,11 @@ header {
 
 h2{
     font-family: 'Zen Dots', cursive;
+    color: #81D8F7;
 }
 
 a {
     text-decoration: none;
-
 }
 
 #list-menu {
@@ -44,7 +44,7 @@ a {
     background-color: #121212;
     border-radius: 10px;
     border: 1px solid #81D8F7;
-
+    
 }
 
 #nav.active #list-menu {
@@ -58,10 +58,10 @@ a {
 
 #list-menu a {
     margin: 0 1rem;
-
+    color: #81D8F7;
 }
 
-a:hover {
+#list-menu a:hover {
     color: #ebe2e2;
 }
 
@@ -105,11 +105,13 @@ a:hover {
 
 .logo {
     font-size: 1.5rem;
+    color: #81D8F7;
 }
 
 
 .home {
     min-height: 75vh;
+    color: #81D8F7;
 }
 
 header,
@@ -216,6 +218,7 @@ footer {
 
 .texto-sobre p{
     margin-bottom: 5px;
+    color: #81D8F7;
 }
 
 .principal-button {
@@ -313,8 +316,7 @@ footer {
 
 .sobre-mim_linkedin p,
 .sobre-mim_contato p,
-.github-Button p,
-.vermais-Button p {
+.github-Button p{
     color: #C4C4C4;
 }
 
@@ -340,6 +342,24 @@ footer {
     font-size: 38px;
     font-weight: bold;
 }
+
+.icon img{
+    width: 250px;
+}
+
+.card{
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 300px;
+    padding: 25px;
+    background-color: #3f3f3f;
+    text-align: justify;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.389);
+}
+
+
 
 .tec {
     display: flex;
