--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ a {
 header,
 .home,
 .sobre,
-.projetos,
+#projetos,
 .skills,
 footer {
     background-color: #121214;
@@ -334,7 +334,7 @@ footer {
     flex-direction: column;
 }
 
-.projetos h2,
+#projetos h2,
 .sobre h2,
 .skills h2 {
     margin-bottom: 25px;
@@ -343,8 +343,31 @@ footer {
     font-weight: bold;
 }
 
+.icon{
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 .icon img{
-    width: 250px;
+    width: 100%;
+    border-radius: 10px;
+    
+}
+
+#projetos h2{
+    padding-top: 20px;
+}
+
+.container-cards{
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 85%;
+    gap: 35px;
+    
+    
 }
 
 .card{
@@ -352,14 +375,81 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 300px;
     padding: 25px;
-    background-color: #3f3f3f;
+    background-color: #1b1b1b;
     text-align: justify;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.389);
+    margin-bottom: 20px;
+    max-width: 430px;
+    min-width: 350px;
+    
 }
 
+.content{
+    height: 215px;
+    overflow: hidden;
+    position: relative;
+}
 
+.content::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(transparent, #1b1b1b);
+}
+
+.content h3{
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 20px;
+    position: relative;
+    color: #C4C4C4;
+}
+
+.content h3::before{
+    content: '';
+    position: absolute;
+    height: 3px;
+    width: 70px;
+    background-color: #81D8F7;
+    bottom: -5px;
+    border-radius: 100px;  
+     
+}
+
+.content p{
+    color: #b7b7b7;
+    margin-bottom: 15px;
+}
+
+.read-button{
+    border: 1px solid #81D8F7;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    background-color: #1b1b1b;
+    color: #C4C4C4;
+    
+    
+}
+
+.read-button:hover{
+    color: #000;
+    background-color: #00bbc5;
+    transition: .3s;
+    
+}
+
+.card.active .content{
+    height: auto;
+}
+
+.card.active .content::before{
+    visibility: hidden;
+}
 
 .tec {
     display: flex;
