--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -26,6 +26,11 @@
         overflow-y: visible;
         font-size: 1.2rem;
         border: 0;
+        
+    }
+
+    #list-menu a{
+        margin: 0 1rem;
     }
 
     .botao-menu {
