--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,12 +73,12 @@ a {
 #list-menu a::after {
     content: ' ';
     width: 0%;
-    height: 2px;
+    height: 3px;
     background-color: #81D8F7;
     position: absolute;
     bottom: 0;
     left: 0;
-    transition: .5s ease-in-out;
+    transition: .4s ease-in-out;
 }
 
 #list-menu a:hover::after{
@@ -361,7 +361,7 @@ footer {
 .skills h2 {
     margin-bottom: 25px;
     text-align: center;
-    font-size: 38px;
+    font-size: 2.4rem;
     font-weight: bold;
 }
 
