--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -1,4 +1,4 @@
-@media (min-width: 481px ) and (max-width: 768px) {
+@media (min-width: 481px ){
     .container-cards{
         flex-wrap: wrap;
     }
