--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -25,7 +25,7 @@
         margin: 0 1rem;
     }
 
-    .botao-menu {
+    .btn-menu {
         display: none;
     }
     
@@ -42,12 +42,6 @@
     
     .home-right{
         display: flex;
-    }
-
-    #projetos h2,
-    .sobre h2,
-    .skills h2 {
-        margin-bottom: 35px;
     }
 
 
@@ -83,6 +77,7 @@
 
     .skill-title{
         font-size: 1.5rem;
+        width: 70%;
     }
 }
 
@@ -109,7 +104,7 @@
         width: 30%;
     }
 
-    .principal-button{
+    .home-button{
         justify-content: flex-start;
     }
 
