--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,17 +235,24 @@ a {
     flex-wrap: wrap;
 }
 
-.section-projects h2,
+.section-aboutMe h2{
+    margin-bottom: 0.8rem;
+}
+
 .section-aboutMe h2,
+.section-projects h2,
 .section-skills h2 {
     color: #81D8F7;
-    margin-bottom: 35px;
+    margin-top: 2rem;
     text-align: center;
     font-size: 1.8rem;
     font-weight: bold;
 }
 
-
+.section-projects h2,
+.section-skills h2{
+    margin-bottom: 2.5rem;
+}
 
 .container-cards{
     display: flex;  
